Fixed overflow-x on pre

--- a/css/main.scss
+++ b/css/main.scss
@@ -201,8 +201,17 @@ li.separate {
   }
 }
 
+.highlight {
+  overflow: auto;
+}
+
 pre {
   background-color: $colour-code;
+}
+
+pre[class*="language-"] {
+  margin: 0px 0px 10px 0px;
+  overflow-x: scroll;
 }
 
 @import
